Bug 102216 - Warning given when importing CSV containing exactly 1048576 records - FILEOPEN IMPORT CSV
Summary: Warning given when importing CSV containing exactly 1048576 records - FILEOPE...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: low trivial
Assignee: Aron Budea
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-15 20:25 UTC by calebc2099
Modified: 2018-02-18 12:50 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
CSV file containing exactly 1048576 records (7.22 MB, text/csv)
2016-09-15 20:25 UTC, calebc2099
Details

Note You need to log in before you can comment on or make changes to this bug.
Description calebc2099 2016-09-15 20:25:14 UTC
Created attachment 127347 [details]
CSV file containing exactly 1048576 records

LibreOffice Calc warns "The data could not be loaded completely because the maximum number of rows per sheet was exceeded." when importing a CSV file containing exactly 1048576 records.

If I remove one record from the CSV file so it has 1048575 records, LibreOffice Calc imports the file without any warnings.  Once imported, I can descend to row 1048576 and enter a value there.

I don't think LibreOffice Calc should be giving a warning when importing exactly 1048576 rows.
Comment 1 Aron Budea 2016-09-16 03:45:12 UTC
Confirmed, with as early as v3.3.0.

In addition, after saving the file as ODT, loading it takes forever, which seems to be a performance issue.
Comment 2 Commit Notification 2016-09-23 12:38:04 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=451c7de9d750f8a2f1348b1eae1bcd8ee042563d

tdf#102216: move row overflow check after EoF check (CSV import)

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Aron Budea 2016-09-23 17:52:16 UTC
That should get rid of the warning when there are exactly 1048576 records. The fix will be part of 5.3.