tdf#102216: move row overflow check after EoF check (CSV import)

With the check in the original place, importing exactly
1048576 rows gave a warning.

Change-Id: Iae98c07f638168d8537436045423ae6274ef7f64